--- a/.github/workflows/publish_schema.yaml
+++ b/.github/workflows/publish_schema.yaml
@@ -12,4 +12,4 @@ jobs:
     if: github.event.pull_request.merged == true
     steps:
       - name: Testing github branch name
-      echo ${GITHUB_REF##*/}
+        run: echo ${GITHUB_REF##*/}
