Fixes missing key

--- a/.github/workflows/publish_schema.yaml
+++ b/.github/workflows/publish_schema.yaml
@@ -9,6 +9,7 @@ on:
 
 jobs:
   publish_schema:
+    runs-on: ubuntu-latest
     if: github.event.pull_request.merged == true
     steps:
       - name: Testing github branch name
