--- a/.github/workflows/publish_schema.yaml
+++ b/.github/workflows/publish_schema.yaml
@@ -12,4 +12,4 @@ jobs:
     steps:
       - name: Testing github branch name
         run: echo ${GITHUB_REF##*/}
-        run: echo ${DEVOPS_DEV_AWS_ACCESS_KEY_ID}
+             echo ${DEVOPS_DEV_AWS_ACCESS_KEY_ID}
