--- a/.github/workflows/publish_schema.yaml
+++ b/.github/workflows/publish_schema.yaml
@@ -13,4 +13,4 @@ jobs:
       - name: Testing github branch name
         run: echo ${GITHUB_REF##*/}
       - name: Test aws key
-        run: echo ${DEVOPS_DEV_AWS_ACCESS_KEY_ID}
+        run: echo ${secrets.DEVOPS_DEV_AWS_ACCESS_KEY_ID}
